# lakehouse_data_platform

./: .gitignore  README.md  airflow.Dockerfile  docker-compose.yml  jupyter.Dockerfile  lakehouse-data-platform.excalidraw  pyproject.toml  requirements.txt
airflow/dags/: version_check.py
compose/: airflow.yml
notebooks/: iceberg-features.ipynb
scripts/: 01_fundamentals.py  02_schema_evolution.py  03_partitioning.py  04_time_travel.py  05_row_level_ops.py  06_compaction.py  07_nessie_branching.py  08_incremental_reads.py  catalog_config.py  create_catalog.py  create_namespace.py  create_table.py  load_tables.py  test_catalog.py  test_nessie.py  test_s3.py  writing_table.py
