[project]
name = "complete-data-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow==3.1.0",
    "boto3>=1.43.0",
    "jupyter>=1.1.1",
    "pandas>=3.0.3",
    "pyiceberg[pyarrow]>=0.11.1",
    "pynessie>=0.67.0",
    "requests>=2.34.2",
    "s3fs>=2026.4.0",
]
